# Genesis-Decision-Lab

./: .gitignore  README.md
Genesis Decision Lab Sim Framework/: AGENTS.md  file_manifest.json  pyproject.toml
Genesis Decision Lab Sim Framework/config/: change_control.json  routing_maps.json  self_model_manifest.yaml
Genesis Decision Lab Sim Framework/config/scenario/: templates.default.v1.json
Genesis Decision Lab Sim Framework/config/simulation/: domains.default.v1.json
Genesis Decision Lab Sim Framework/docs/: decision_lab_seed.md  replay.md  system_overview.md
Genesis Decision Lab Sim Framework/docs/specs/: 03_deduplication_and_correlated_evidence.md  04_regime_conditioning_playbook.md  06_calibration_and_scoring.md  08_failure_modes_and_red_team_tests.md  10_operational_rules_for_evidence.md  12_question_templates_catalog.md  regime_state_summary.md  scenario_generation.md  simulation_framework.md
Genesis Decision Lab Sim Framework/ledger/: evidence_ledger.py  scenario_ledger.py
Genesis Decision Lab Sim Framework/pipeline/: monte_carlo.py  regime_update.py  web_search_fetch.py
Genesis Decision Lab Sim Framework/schemas/algorithms/: calibration.schema.json
Genesis Decision Lab Sim Framework/schemas/automation/: triage.schema.json
Genesis Decision Lab Sim Framework/schemas/simulation/: domain_run.schema.json
Genesis Decision Lab Sim Framework/tests/: test_calibration.py  test_decision_lab_phase2.py  test_orchestration_runner.py  test_pipeline.py  test_policy_metamorphic.py  test_tetlock_module.py  test_tool_manifest.py  test_uncertainty_router.py
(+196 files in other folders)
